// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="usd1-react-ui-select p-dropdown p-component p-inputwrapper"
    data-p-disabled="false"
    data-p-focus="false"
    data-pc-name="dropdown"
    data-pc-section="root"
  >
    <div
      class="p-hidden-accessible"
      data-pc-section="hiddenselectedmessage"
    >
      <input
        aria-haspopup="listbox"
        data-pc-section="input"
        readonly=""
        tabindex="0"
        type="text"
      />
    </div>
    <div
      class="p-hidden-accessible p-dropdown-hidden-select"
      data-pc-section="hiddenselectedmessage"
    >
      <select
        aria-hidden="true"
        data-pc-section="select"
        tabindex="-1"
      >
        <option
          data-pc-section="option"
          selected=""
          value=""
        />
      </select>
    </div>
    <span
      class="p-dropdown-label p-inputtext p-dropdown-label-empty"
      data-pc-section="input"
      tabindex="-1"
    >
       
    </span>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="p-dropdown-trigger"
      data-pc-section="trigger"
      role="button"
    >
      <svg
        aria-hidden="true"
        class="p-icon p-dropdown-trigger-icon p-clickable"
        data-pc-section="dropdownicon"
        data-pr-overlay-visible="false"
        fill="none"
        height="14"
        viewBox="0 0 14 14"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.01744 10.398C6.91269 10.3985 6.8089 10.378 6.71215 10.3379C6.61541 10.2977 6.52766 10.2386 6.45405 10.1641L1.13907 4.84913C1.03306 4.69404 0.985221 4.5065 1.00399 4.31958C1.02276 4.13266 1.10693 3.95838 1.24166 3.82747C1.37639 3.69655 1.55301 3.61742 1.74039 3.60402C1.92777 3.59062 2.11386 3.64382 2.26584 3.75424L7.01744 8.47394L11.769 3.75424C11.9189 3.65709 12.097 3.61306 12.2748 3.62921C12.4527 3.64535 12.6199 3.72073 12.7498 3.84328C12.8797 3.96582 12.9647 4.12842 12.9912 4.30502C13.0177 4.48162 12.9841 4.662 12.8958 4.81724L7.58083 10.1322C7.50996 10.2125 7.42344 10.2775 7.32656 10.3232C7.22968 10.3689 7.12449 10.3944 7.01744 10.398Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Select renders correctly 2`] = `
LoadedCheerio {
  "0": <div
    class="usd1-react-ui-select p-multiselect p-component p-inputwrapper"
    data-pc-name="multiselect"
    data-pc-section="root"
  >
    <div
      class="p-hidden-accessible"
      data-p-hidden-accessible="true"
      data-pc-section="hiddeninputwrapper"
    >
      <input
        aria-expanded="false"
        data-pc-section="input"
        readonly=""
        role="combobox"
        tabindex="0"
        type="text"
        value="null"
      />
    </div>
    <div
      class="p-multiselect-label-container"
      data-pc-section="labelcontainer"
    >
      <div
        class="p-multiselect-label p-multiselect-label-empty"
        data-pc-section="label"
      >
        empty
      </div>
    </div>
    <div
      class="p-multiselect-trigger"
      data-pc-section="trigger"
    >
      <svg
        aria-hidden="true"
        class="p-icon p-multiselect-trigger-icon p-c"
        data-pc-section="triggericon"
        fill="none"
        height="14"
        viewBox="0 0 14 14"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.01744 10.398C6.91269 10.3985 6.8089 10.378 6.71215 10.3379C6.61541 10.2977 6.52766 10.2386 6.45405 10.1641L1.13907 4.84913C1.03306 4.69404 0.985221 4.5065 1.00399 4.31958C1.02276 4.13266 1.10693 3.95838 1.24166 3.82747C1.37639 3.69655 1.55301 3.61742 1.74039 3.60402C1.92777 3.59062 2.11386 3.64382 2.26584 3.75424L7.01744 8.47394L11.769 3.75424C11.9189 3.65709 12.097 3.61306 12.2748 3.62921C12.4527 3.64535 12.6199 3.72073 12.7498 3.84328C12.8797 3.96582 12.9647 4.12842 12.9912 4.30502C13.0177 4.48162 12.9841 4.662 12.8958 4.81724L7.58083 10.1322C7.50996 10.2125 7.42344 10.2775 7.32656 10.3232C7.22968 10.3689 7.12449 10.3944 7.01744 10.398Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
